# learned-indices-neo4j

./: .gitignore  README.md  experiment.toml  pyproject.toml
data/: born.csv  imdbVotes.csv  released.csv  year.csv
src/learned_indices_neo4j/: __init__.py  __main__.py  btree_index.py  cli.py  config.py  distribution_shift.py  experiments.py  io.py  neo4j_extractor.py  pgm_index.py  records.py  rmi_index.py  sorted_array_index.py
tests/: test_config.py  test_distribution_shift.py  test_experiments.py  test_indexing.py
